# geih-analisis

./: .gitignore  .pre-commit-config.yaml  2026_04_01_Consolidado_Codigo_GEIH.py  CHANGELOG.md  LICENSE  README.md  excel_parser.py  geih_config.json  pre-commit-config.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  release.yml
docs/: 2026-03-25 GEIH_2025_Guia_Academica_ProColombia.docx  2026-03-26 GEIH_2025_Documento_Consulta.docx  Aprendizajes GitHub_PyPI_Publicacion.md  DOCUMENTACION_TECNICA.md  Documentación Técnica.docx  FOR_Noticias.md  GUIA_GEIH.md
geih/: __init__.py  analisis_area.py  analisis_avanzado.py  analisis_complementario.py  analisis_departamental.py  analisis_dpto_rama.py  analisis_poblacional.py  analisis_tierra.py  comparativo.py  config.py  consolidador.py  dashboard.py  descargador.py  diagnostico.py  estacional.py  exportador.py  indicadores.py  informalidad.py  logger.py  muestreo.py  preparador.py  profiler.py  replicacion_dane_common.py  replicacion_dane_informalidad.py  replicacion_dane_seguridad_social.py  utils.py  visualizacion.py  visualizacion_interactiva.py
notebooks/: 2026_03_28_consolidar_geih_analisis_y_calculos.py  Pipeline_GEIH.py  barrido_v73_FINAL.py
tests/: __init__.py  conftest.py  generar_golden_expected.py  generar_golden_set.py  golden_expected.json  golden_set.parquet  smoke_test.py  test_analisis_dpto_rama.py  test_canarios_boletin.py  test_config.py  test_consolidador.py  test_estadisticas_ponderadas.py  test_indicadores.py  test_informalidad.py  test_layout_excel_dane.py  test_paridad_golden.py  test_preparador.py  test_replicacion_informalidad_excel.py  test_replicacion_seguridad_social_excel.py  test_resolver_trimestre.py
